--- a/.gitmodules
+++ b/.gitmodules
@@ -1,57 +1,57 @@
 [submodule "wine"]
-	path = wine
-	url = ../wine
+        path = wine
+        url = ../wine
 [submodule "dxvk"]
-	path = dxvk
-	url = https://github.com/doitsujin/dxvk.git
+        path = dxvk
+        url = git@github.com:ValveSoftware/dxvk.git
 [submodule "openvr"]
-	path = openvr
-	url = https://github.com/ValveSoftware/openvr
+        path = openvr
+        url = git@github.com:ValveSoftware/openvr.git
 [submodule "fonts/liberation-fonts"]
-	path = fonts/liberation-fonts
-	url = https://github.com/liberationfonts/liberation-fonts
+        path = fonts/liberation-fonts
+        url = git@github.com:liberationfonts/liberation-fonts.git
 [submodule "gstreamer"]
-	path = gstreamer
-	url = https://github.com/GStreamer/gstreamer.git
+        path = gstreamer
+        url = git@github.com:GStreamer/gstreamer.git
 [submodule "gst-orc"]
-	path = gst-orc
-	url = https://github.com/GStreamer/orc.git
+        path = gst-orc
+        url = git@github.com:GStreamer/orc.git
 [submodule "vkd3d-proton"]
-	path = vkd3d-proton
-	url = https://github.com/HansKristian-Work/vkd3d-proton
+        path = vkd3d-proton
+        url = git@github.com:HansKristian-Work/vkd3d-proton.git
 [submodule "OpenXR-SDK"]
-	path = OpenXR-SDK
-	url = https://github.com/KhronosGroup/OpenXR-SDK
+        path = OpenXR-SDK
+        url = git@github.com:KhronosGroup/OpenXR-SDK.git
 [submodule "dxvk-nvapi"]
-	path = dxvk-nvapi
-	url = https://github.com/jp7677/dxvk-nvapi
+        path = dxvk-nvapi
+        url = git@github.com:jp7677/dxvk-nvapi.git
 [submodule "vkd3d"]
-	path = vkd3d
-	url = https://github.com/ValveSoftware/vkd3d
+        path = vkd3d
+        url = git@github.com:ValveSoftware/vkd3d.git
 [submodule "Vulkan-Headers"]
-	path = Vulkan-Headers
-	url = https://github.com/KhronosGroup/Vulkan-Headers
+        path = Vulkan-Headers
+        url = git@github.com:KhronosGroup/Vulkan-Headers.git
 [submodule "SPIRV-Headers"]
-	path = SPIRV-Headers
-	url = https://github.com/KhronosGroup/SPIRV-Headers
+        path = SPIRV-Headers
+        url = git@github.com:KhronosGroup/SPIRV-Headers.git
 [submodule "Vulkan-Loader"]
-	path = Vulkan-Loader
-	url = https://github.com/KhronosGroup/Vulkan-Loader
+        path = Vulkan-Loader
+        url = git@github.com:KhronosGroup/Vulkan-Loader.git
 [submodule "gst-libav"]
-	path = gst-libav
-	url = https://github.com/GStreamer/gst-libav
+        path = gst-libav
+        url = git@github.com:GStreamer/gst-libav.git
 [submodule "ffmpeg"]
-	path = ffmpeg
-	url = https://github.com/FFmpeg/FFmpeg
+        path = ffmpeg
+        url = git@github.com:FFmpeg/FFmpeg.git
 [submodule "dav1d"]
-	path = dav1d
-	url = https://github.com/videolan/dav1d.git
+        path = dav1d
+        url = git@github.com:videolan/dav1d.git
 [submodule "gst-plugins-rs"]
-	path = gst-plugins-rs
-	url = https://github.com/sdroege/gst-plugin-rs
+        path = gst-plugins-rs
+        url = git@github.com:sdroege/gst-plugin-rs.git
 [submodule "graphene"]
-	path = graphene
-	url = https://github.com/ebassi/graphene
+        path = graphene
+        url = https://github.com/ebassi/graphene.git
 [submodule "glslang"]
-	path = glslang
-	url = https://github.com/KhronosGroup/glslang
+        path = glslang
+        url = git@github.com:KhronosGroup/glslang.git
